# Knowledge_Graph_Question_Answering

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: README.md  chat_app.py  dashboard.py  requirements.txt
docs/: Graph_RAG_PPT.pptx  index.md
notebooks/: 01_ingest.ipynb  02_benchmark.ipynb
scripts/: compare.py  ingest.py  run_benchmark.py
src/kgqa/: __init__.py  config.py  data.py  evaluation.py  llm.py  models.py  prompts.py
src/kgqa/retrieval/: __init__.py  base.py  graph.py  plain.py
tests/: conftest.py  test_config.py  test_data.py  test_evaluation.py  test_llm.py  test_retrieval.py
