[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgqa"
version = "1.0.0"
description = "Fair GraphRAG vs PlainRAG comparison on PubMedQA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; long AQL strings are fine

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # sys.path insert before imports is intentional
